force-app/main/default/objects/Visit_Note_Template__mdt/Visit_Note_Template__mdt.object-meta.xml
<CustomObject>
    <description>Templates for peer visit documentation organized by visit type</description>
    <label>Visit Note Template</label>
    <pluralLabel>Visit Note Templates</pluralLabel>
</CustomObject>