force-app/main/default/objects/Visit_Note_Template__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this template will be the default for its Work Type</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>