force-app/main/default/objects/Visit_Note_Template__mdt/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <description>The type of visit this template is designed for</description>
    <label>Work Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial_IRP</fullName>
                <label>Initial IRP</label>
            </value>
            <value>
                <fullName>Follow_Up_IRP</fullName>
                <label>Follow-Up IRP</label>
            </value>
            <value>
                <fullName>Weekly_Meeting</fullName>
                <default>true</default>
                <label>Weekly Meeting</label>
            </value>
            <value>
                <fullName>Crisis_Support</fullName>
                <label>Crisis Support</label>
            </value>
            <value>
                <fullName>General</fullName>
                <label>General Visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>